2005/12/26 -- released version 20051226_trunk

2005/12/25 -- released version 20051225_trunk

2005/12/24 -- released version 20051224_trunk

2005/12/23 -- released version 20051223_trunk

2005/12/22 -- released version 20051222_trunk

2005/12/21 -- released version 20051221_trunk

* Set an --end time for graphs so that fetch does get its its
  undies in a twist when selecting the RRA and goes for hires
  due to coverage -- tobi
* CiscoRTTMonEchoICMP.pm: new variable vrf
  - Kevin Stewart <kevins *callplus.co.nz>

2005/12/20 -- released version 20051220_trunk

2005/12/19 -- released version 20051219_trunk

2005/12/18 -- released version 20051218_trunk

2005/12/17 -- released version 20051217_trunk

2005/12/16 -- released version 20051216_trunk

2005/12/15 -- released version 20051215_trunk

2005/12/14 -- released version 20051214_trunk

2005/12/13 -- released version 20051213_trunk

2005/12/12 -- released version 20051212_trunk

* SSH.pm: new variable 'keytype' + bugfixes
  - niko, from Igor Petrovski <pigor *mm.st>
* fix a bug that broke target sections with the same name
  in different branches  -- niko, reported by Igor Petrovski <pigor *mm.st>

2005/12/11 -- released version 20051211_trunk

2005/12/10 -- released version 20051210_trunk

2005/12/9 -- released version 20051209_trunk

2005/12/8 -- released version 20051208_trunk

2005/12/7 -- released version 20051207_trunk

2005/12/6 -- released version 20051206_trunk

2005/12/5 -- released version 20051205_trunk

2005/12/4 -- released version 20051204_trunk

2005/12/3 -- released version 20051203_trunk

* really send a test email with 'tSmoke --testmail' -- niko
* Curl.pm: handle measurement of multiple URLs by adding the results together
  -- niko, requested by Rob de Jong <rob *dejongnet.net>
* Curl.pm: new variables 'follow_redirects' and 'include_redirects'
  -- niko, requested by Rob de Jong <rob *dejongnet.net>

2005/12/2 -- released version 20051202_trunk

2005/12/1 -- released version 20051201_trunk
