@@ -1,3 +1,5 @@
+2005/12/27 -- released version 20051227_trunk
+
 2005/12/26 -- released version 20051226_trunk
 
 2005/12/25 -- released version 20051225_trunk
